# python-skeleton

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md
scripts/: rename_project.sh
src/project_name/: __init__.py  main.py
src/project_name/adapters/: README.md
src/project_name/adapters/api/: __init__.py  greeting_controller.py
src/project_name/adapters/repositories/: __init__.py  in_memory_greeting_repository.py
src/project_name/domain/: README.md
src/project_name/domain/greeting/: __init__.py  entities.py  exceptions.py  repositories.py
src/project_name/infrastructure/: README.md
src/project_name/infrastructure/api/: __init__.py  app.py
src/project_name/infrastructure/config/: __init__.py  settings.py
src/project_name/use_cases/: README.md
src/project_name/use_cases/greeting/: __init__.py  dtos.py  service.py
tests/: conftest.py
tests/unit/: test_main.py
