[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project_name"
version = "0.1.0"
description = "A project template following clean architecture principles"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "your.email@example.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["fastapi>=0.115.12", "pydantic>=2.6.0", "uvicorn>=0.34.2"]

[project.scripts]
project_name = "project_name.main:main"

[dependency-groups]
dev = [
    "autotyping>=24.9.0",
    "httpx>=0.28.1",
    "pyclean>=3.1.0",
    "pylic>=5.0.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-timeout>=2.4.0",
    "ruff>=0.11.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120
target-version = "py311"
fix = true
output-format = "grouped"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "FA",  # flake8-future-annotations
    "T20", # flake8-print (removes print statements)
    "RET", # flake8-return
    "ARG", # flake8-unused-arguments
]
ignore = [
    "E203", # whitespace before ':' (conflicts with black)
]

[tool.ruff.lint.isort]
known-first-party = ["project_name"]

[tool.ruff.lint.flake8-type-checking]
strict = true


[tool.mypy]
python_version = "3.11"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests"]

[tool.pylic]
safe_licenses = [
    "Apache-2.0",
    "MIT License",
    "MIT",
    "PSF-2.0",
    "BSD License",
    "BSD-2-Clause",
    "ISC License (ISCL)",
]
# https://github.com/ubersan/pylic?tab=readme-ov-file#usage-example
